added header tag and comments

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <body>
     <!-- Here is where the content of your HTML document will go. -->
+    <h1>gStripe</h1>
+    <!-- header tags go from largest being "h1" to smallest being "h5" -->
+    <!-- this is where you'll put the heading of your webpage -->
   </body>
 
 </html>
