added paragraph tags and comments

--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
     <title>THIS IS WHERE YOUR TITLE WILL GO</title>
   </head>
 
+  <!-- Here is where the content of your HTML document will go. -->
+
   <body>
-    <!-- Here is where the content of your HTML document will go. -->
-    <h1>gStripe</h1>
     <!-- header tags go from largest being "h1" to smallest being "h5" -->
     <!-- this is where you'll put the heading of your webpage -->
+    <h1>gStripe</h1>
+
+    <!-- paragraph tags is where we will put the body text of our website -->
+    <p>
+      this is where you can write a paragraph about how much you love coding.
+    </p>
+    <p>
+      this paragraph is about how much you love this class.
+    </p>
+
   </body>
 
 </html>
