added div tags and comments

--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
     <!-- this is where you'll put the heading of your webpage -->
     <h1>gStripe</h1>
 
-    <!-- paragraph tags is where we will put the body text of our website -->
-    <p>
-      this is where you can write a paragraph about how much you love coding.
-    </p>
-    <p>
-      this paragraph is about how much you love this class.
-    </p>
+    <!-- We added a div tag around the paragraphs in order to keep similar information together -->
+    <div>
+      <!-- paragraph tags is where we will put the body text of our website -->
+      <p>
+        this is where you can write a paragraph about how much you love coding.
+      </p>
+      <p>
+        this paragraph is about how much you love this class.
+      </p>
+
+    </div>
 
   </body>
 
