added form tags and comments

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <title>THIS IS WHERE YOUR TITLE WILL GO</title>
   </head>
 
-  <!-- Here is where the content of your HTML document will go. -->
 
   <body>
+    <!-- Here is where the content of your HTML document will go. -->
+
     <!-- header tags go from largest being "h1" to smallest being "h5" -->
     <!-- this is where you'll put the heading of your webpage -->
     <h1>gStripe</h1>
@@ -25,6 +26,14 @@
       <p>
         this paragraph is about how much you love this class.
       </p>
+
+    </div>
+    <!-- we added another div tag for our form -->
+    <div>
+
+      <form>
+        <!-- here we will populate our form with a few different inputs outlined in the README -->
+      </form>
 
     </div>
 
