filled out form with inputs and submit button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
 
       <form>
         <!-- here we will populate our form with a few different inputs outlined in the README -->
+        <input type="text" name="input" value="">
+        <!-- <br> tags give a line break in order to add a new line to our form -->
+        <br>
+        <!-- notice the differnce between text area and text input -->
+        <textarea name="area" rows="8" cols="80"></textarea>
+        <br>
+        <input type="radio" name="radio" value="">
+        <!--
+          - the button will allow us to submit our form
+          - we'll add functionality to this form later in the class
+          - for now this is just an excercise in HTML structure
+        -->
+        <button type="submit" name="button">Submit</button>
       </form>
 
     </div>
